--- a/research/RAG_pipeline.ipynb
+++ b/research/RAG_pipeline.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,14 +283,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/38/q1znsjsj5c17qlggflslw4000000gn/T/ipykernel_96557/1450111919.py:6: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "/var/folders/38/q1znsjsj5c17qlggflslw4000000gn/T/ipykernel_68759/1450111919.py:6: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  df = pd.read_sql_query(query, connection)\n"
      ]
     },
@@ -374,7 +374,7 @@
        "1  <div class=\"content1\">\\n <div>\\n  <div>\\n   <t...  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,14 +395,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/38/q1znsjsj5c17qlggflslw4000000gn/T/ipykernel_96557/3549705010.py:10: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "/var/folders/38/q1znsjsj5c17qlggflslw4000000gn/T/ipykernel_68759/3549705010.py:10: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  df = pd.read_sql_query(query, connection)\n"
      ]
     }
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -771,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -838,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -874,7 +874,7 @@
     "import pandas as pd\n",
     "\n",
     "# Đường dẫn đến thư mục \"Khoi\"\n",
-    "folder_path = 'Khoi'\n",
+    "folder_path = '../Khoi'\n",
     "\n",
     "# Danh sách lưu trữ các DataFrame\n",
     "df_list = []\n",
@@ -937,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -971,14 +971,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fetching 30 files: 100%|██████████| 30/30 [00:00<00:00, 17171.00it/s]\n",
+      "Fetching 30 files: 100%|██████████| 30/30 [00:00<00:00, 17262.88it/s]\n",
       "/Volumes/home/Learn/Master/3.LLMs/rag_pipeline/.venv/lib/python3.11/site-packages/FlagEmbedding/BGE_M3/modeling.py:335: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
       "  colbert_state_dict = torch.load(os.path.join(model_dir, 'colbert_linear.pt'), map_location='cpu')\n",
       "/Volumes/home/Learn/Master/3.LLMs/rag_pipeline/.venv/lib/python3.11/site-packages/FlagEmbedding/BGE_M3/modeling.py:336: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
@@ -998,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1031,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1058,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1067,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1081,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1095,7 +1095,7 @@
        "         0.08084679,  0.00141645], dtype=float32)]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1106,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1132,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1141,7 +1141,7 @@
        "{'insert_count': 3, 'ids': [0, 1, 2], 'cost': 0}"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1153,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1178,7 +1178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1196,7 +1196,7 @@
     "import pandas as pd\n",
     "\n",
     "# Đường dẫn đến thư mục \"Khoi\"\n",
-    "folder_path = 'Khoi'\n",
+    "folder_path = '../Khoi'\n",
     "\n",
     "# Danh sách lưu trữ các DataFrame\n",
     "df_list = []\n",
@@ -1263,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1311,7 +1311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1347,7 +1347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1360,7 +1360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1369,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1382,7 +1382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1391,7 +1391,7 @@
        "['default', 'my_database']"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1402,7 +1402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1411,7 +1411,7 @@
        "['default']"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1424,7 +1424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1446,7 +1446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1466,7 +1466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1480,19 +1480,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
-    "client.create_user(\n",
-    "    user_name='user_1',\n",
-    "    password='P@ssw0rd'\n",
-    ")\n"
+    "# client.create_user(\n",
+    "#     user_name='user_1',\n",
+    "#     password='P@ssw0rd'\n",
+    "# )\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1501,7 +1501,7 @@
        "['root', 'user_1']"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1513,16 +1513,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'user_name': 'user_1', 'roles': ()}"
+       "{'user_name': 'user_1', 'roles': ('roleA',)}"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1534,7 +1534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1545,7 +1545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -1554,7 +1554,7 @@
        "['admin', 'public', 'roleA']"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1566,7 +1566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1581,7 +1581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1596,7 +1596,7 @@
        "   'grantor_name': 'root'}]}"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1610,7 +1610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1623,7 +1623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -1632,7 +1632,7 @@
        "{'user_name': 'user_1', 'roles': ('roleA',)}"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1646,7 +1646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1657,7 +1657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1671,7 +1671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -1689,7 +1689,7 @@
     "import pandas as pd\n",
     "\n",
     "# Đường dẫn đến thư mục \"Khoi\"\n",
-    "folder_path = 'Khoi'\n",
+    "folder_path = '../Khoi'\n",
     "\n",
     "# Danh sách lưu trữ các DataFrame\n",
     "df_list = []\n",
@@ -1756,7 +1756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1774,7 +1774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
