--- a/research/RAG_pipeline_final.ipynb
+++ b/research/RAG_pipeline_final.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,26 +25,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Step 4: Initialize LLaMA LLM via Ollama\n",
-    "llm = Ollama(model=\"llama3.1:latest\")\n"
+    "llm = Ollama(model=\"llama3.1:latest\")\n",
+    "# llm = Ollama(model=\"llama3.1:70b\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Volumes/home/Learn/Master/3.LLMs/rag_pipeline/.venv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "Fetching 30 files: 100%|██████████| 30/30 [00:00<00:00, 227128.38it/s]\n",
+      "Fetching 30 files: 100%|██████████| 30/30 [00:00<00:00, 68311.14it/s]\n",
       "/Volumes/home/Learn/Master/3.LLMs/rag_pipeline/.venv/lib/python3.11/site-packages/FlagEmbedding/BGE_M3/modeling.py:335: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
       "  colbert_state_dict = torch.load(os.path.join(model_dir, 'colbert_linear.pt'), map_location='cpu')\n",
       "/Volumes/home/Learn/Master/3.LLMs/rag_pipeline/.venv/lib/python3.11/site-packages/FlagEmbedding/BGE_M3/modeling.py:336: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
@@ -71,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +105,7 @@
     "# import pandas as pd\n",
     "\n",
     "# # Đường dẫn đến thư mục \"Khoi\"\n",
-    "# folder_path = 'Khoi'\n",
+    "# folder_path = '../Khoi'\n",
     "\n",
     "# # Danh sách lưu trữ các DataFrame\n",
     "# df_list = []\n",
@@ -173,33 +172,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'text': 'Quyết định 720/QĐ-CTN năm 2020 về cho thôi quốc tịch Việt Nam đối với 95 công dân hiện đang cư trú tại Đức do Chủ tịch nước ban hành', 'id': 100000}\n",
-      "{'text': 'Quyết định 719/QĐ-CTN năm 2020 về cho thôi quốc tịch Việt Nam đối với 15 công dân hiện đang cư trú tại Hồng Kông (Trung Quốc) do Chủ tịch nước ban hành', 'id': 100001}\n",
-      "{'text': 'Quyết định 648/QĐ-TTg năm 2020 về phê duyệt nhiệm vụ lập quy hoạch mạng lưới cơ sở y tế thời kỳ 2021-2030, tầm nhìn đến năm 2045 do Thủ tướng Chính phủ ban hành', 'id': 100002}\n",
-      "{'text': 'Quyết định 1000/QĐ-UBND năm 2020 công bố danh mục thủ tục hành chính thuộc phạm vi chức năng quản lý nhà nước của Sở Công thương tỉnh Sơn La', 'id': 100003}\n",
-      "{'text': 'Quyết định 1517/QĐ-UBND năm 2020 về công bố Danh mục và Quy trình nội bộ thủ tục hành chính được sửa đổi, bổ sung thuộc thẩm quyền quản lý của ngành Xây dựng áp dụng tại Ủy ban nhân dân cấp huyện trên địa bàn tỉnh Hà Tĩnh', 'id': 100004}\n",
-      "{'text': 'Quyết định 647/QĐ-TTg năm 2020 về phê duyệt Đề án hợp tác quốc tế về phát triển bền vững kinh tế biển Việt Nam đến 2030 do Thủ tướng Chính phủ ban hành', 'id': 100005}\n",
-      "{'text': 'Quyết định 949/QĐ-BGTVT năm 2020 công bố thủ tục hành chính được sửa đổi, bổ sung lĩnh vực hàng không thuộc phạm vi chức năng quản lý của Bộ Giao thông vận tải', 'id': 100006}\n",
-      "{'text': 'Quyết định 579/QĐ-TCCB về Kế hoạch thi và chỉ tiêu thi nâng ngạch lên chuyên viên, chuyên viên chính năm 2020 do Chánh án Tòa án nhân dân tối cao ban hành', 'id': 100007}\n",
-      "{'text': 'Quyết định 649/QĐ-TTg năm 2020 về phê duyệt chủ trương đầu tư Dự án đầu tư xây dựng tuyến đường bộ ven biển đoạn Hoằng Hóa - Sầm Sơn và đoạn Quảng Xương - Tĩnh Gia, tỉnh Thanh Hóa theo hình thức đối tác công tư, hợp đồng BOT do Thủ tướng Chính phủ ban hành', 'id': 100008}\n",
-      "{'text': 'Quyết định 13/2020/QĐ-UBND bãi bỏ Quyết định 10/2015/QĐ-UBND quy định về chính sách hỗ trợ doanh nghiệp xuất khẩu phần mềm trên địa bàn thành phố Đà Nẵng', 'id': 100009}\n",
-      "{'text': 'Quyết định 854/QĐ-UBND về phê duyệt Kế hoạch phát triển nông nghiệp ứng dụng công nghệ cao, nông nghiệp thông minh trên địa bàn tỉnh Lâm Đồng năm 2020', 'id': 100010}\n",
-      "{'text': 'Quyết định 1079/QĐ-UBND năm 2020 công bố danh mục thủ tục hành chính thực hiện chính sách hỗ trợ người dân gặp khó khăn do đại dịch Covid-19 thuộc lĩnh vực Lao động - Thương binh và Xã hội trên địa bàn tỉnh Đắk Lắk', 'id': 100011}\n",
-      "{'text': 'Quyết định 09/2020/QĐ-UBND về Bảng giá tính thuế tài nguyên trên địa bàn tỉnh Phú Thọ năm 2020', 'id': 100012}\n",
-      "{'text': 'Quyết định 13/2020/QĐ-UBND về phân cấp thẩm quyền cấp, điều chỉnh, thu hồi Giấy phép đủ điều kiện kinh doanh dịch vụ karaoke trên địa bàn tỉnh Nghệ An', 'id': 100013}\n",
-      "{'text': 'Kế hoạch 112/KH-UBND năm 2020 về thực hiện Quyết định 142/QĐ-TTg thực hiện Kết luận 52-KL/TW về tiếp tục thực hiện Nghị quyết về xây dựng đội ngũ trí thức trong thời kỳ đẩy mạnh công nghiệp hóa, hiện đại hóa đất nước do tỉnh Yên Bái ban hành', 'id': 100014}\n",
-      "{'text': 'Quyết định 859/QĐ-UBND về phê duyệt danh mục dịch vụ công trực tuyến và danh mục dịch vụ công của tỉnh Lâm Đồng tích hợp, cung cấp trên Cổng dịch vụ công Quốc gia năm 2020', 'id': 100015}\n",
-      "{'text': 'Kế hoạch 4223/KH-UBND năm 2020 thực hiện Nghị quyết 35/NQ-CP về tăng cường huy động nguồn lực của xã hội đầu tư cho phát triển giáo dục và đào tạo trên địa bàn tỉnh Đắk Lắk giai đoạn 2019-2025', 'id': 100016}\n",
-      "{'text': 'Quyết định 22/2020/QĐ-UBND về tiêu chuẩn, định mức sử dụng máy móc, thiết bị chuyên dùng thuộc lĩnh vực y tế do tỉnh Vĩnh Phúc ban hành', 'id': 100017}\n",
-      "{'text': 'Quyết định 18/2020/QĐ-UBND quy định về mức giá dịch vụ sử dụng đường bộ của các phương tiện giao thông đối với dự án Đường ĐT.768 theo hình thức đối tác công tư, hợp đồng BOT do tỉnh Đồng Nai ban hành', 'id': 100018}\n",
-      "{'text': 'Thông báo 1403/TB-GDĐT-KTKĐCLGD năm 2020 về tuyển thẳng vào lớp 10 trung học phổ thông năm học 2020-2021 do Sở Giáo dục và Đào tạo thành phố Hồ Chí Minh ban hành', 'id': 100019}\n"
+      "{'id': 100000, 'text': 'Quyết định 720/QĐ-CTN năm 2020 về cho thôi quốc tịch Việt Nam đối với 95 công dân hiện đang cư trú tại Đức do Chủ tịch nước ban hành'}\n",
+      "{'id': 100001, 'text': 'Quyết định 719/QĐ-CTN năm 2020 về cho thôi quốc tịch Việt Nam đối với 15 công dân hiện đang cư trú tại Hồng Kông (Trung Quốc) do Chủ tịch nước ban hành'}\n",
+      "{'id': 100002, 'text': 'Quyết định 648/QĐ-TTg năm 2020 về phê duyệt nhiệm vụ lập quy hoạch mạng lưới cơ sở y tế thời kỳ 2021-2030, tầm nhìn đến năm 2045 do Thủ tướng Chính phủ ban hành'}\n",
+      "{'id': 100003, 'text': 'Quyết định 1000/QĐ-UBND năm 2020 công bố danh mục thủ tục hành chính thuộc phạm vi chức năng quản lý nhà nước của Sở Công thương tỉnh Sơn La'}\n",
+      "{'id': 100004, 'text': 'Quyết định 1517/QĐ-UBND năm 2020 về công bố Danh mục và Quy trình nội bộ thủ tục hành chính được sửa đổi, bổ sung thuộc thẩm quyền quản lý của ngành Xây dựng áp dụng tại Ủy ban nhân dân cấp huyện trên địa bàn tỉnh Hà Tĩnh'}\n",
+      "{'id': 100005, 'text': 'Quyết định 647/QĐ-TTg năm 2020 về phê duyệt Đề án hợp tác quốc tế về phát triển bền vững kinh tế biển Việt Nam đến 2030 do Thủ tướng Chính phủ ban hành'}\n",
+      "{'id': 100006, 'text': 'Quyết định 949/QĐ-BGTVT năm 2020 công bố thủ tục hành chính được sửa đổi, bổ sung lĩnh vực hàng không thuộc phạm vi chức năng quản lý của Bộ Giao thông vận tải'}\n",
+      "{'id': 100007, 'text': 'Quyết định 579/QĐ-TCCB về Kế hoạch thi và chỉ tiêu thi nâng ngạch lên chuyên viên, chuyên viên chính năm 2020 do Chánh án Tòa án nhân dân tối cao ban hành'}\n",
+      "{'id': 100008, 'text': 'Quyết định 649/QĐ-TTg năm 2020 về phê duyệt chủ trương đầu tư Dự án đầu tư xây dựng tuyến đường bộ ven biển đoạn Hoằng Hóa - Sầm Sơn và đoạn Quảng Xương - Tĩnh Gia, tỉnh Thanh Hóa theo hình thức đối tác công tư, hợp đồng BOT do Thủ tướng Chính phủ ban hành'}\n",
+      "{'id': 100009, 'text': 'Quyết định 13/2020/QĐ-UBND bãi bỏ Quyết định 10/2015/QĐ-UBND quy định về chính sách hỗ trợ doanh nghiệp xuất khẩu phần mềm trên địa bàn thành phố Đà Nẵng'}\n",
+      "{'id': 100010, 'text': 'Quyết định 854/QĐ-UBND về phê duyệt Kế hoạch phát triển nông nghiệp ứng dụng công nghệ cao, nông nghiệp thông minh trên địa bàn tỉnh Lâm Đồng năm 2020'}\n",
+      "{'id': 100011, 'text': 'Quyết định 1079/QĐ-UBND năm 2020 công bố danh mục thủ tục hành chính thực hiện chính sách hỗ trợ người dân gặp khó khăn do đại dịch Covid-19 thuộc lĩnh vực Lao động - Thương binh và Xã hội trên địa bàn tỉnh Đắk Lắk'}\n",
+      "{'id': 100012, 'text': 'Quyết định 09/2020/QĐ-UBND về Bảng giá tính thuế tài nguyên trên địa bàn tỉnh Phú Thọ năm 2020'}\n",
+      "{'id': 100013, 'text': 'Quyết định 13/2020/QĐ-UBND về phân cấp thẩm quyền cấp, điều chỉnh, thu hồi Giấy phép đủ điều kiện kinh doanh dịch vụ karaoke trên địa bàn tỉnh Nghệ An'}\n",
+      "{'id': 100014, 'text': 'Kế hoạch 112/KH-UBND năm 2020 về thực hiện Quyết định 142/QĐ-TTg thực hiện Kết luận 52-KL/TW về tiếp tục thực hiện Nghị quyết về xây dựng đội ngũ trí thức trong thời kỳ đẩy mạnh công nghiệp hóa, hiện đại hóa đất nước do tỉnh Yên Bái ban hành'}\n",
+      "{'id': 100015, 'text': 'Quyết định 859/QĐ-UBND về phê duyệt danh mục dịch vụ công trực tuyến và danh mục dịch vụ công của tỉnh Lâm Đồng tích hợp, cung cấp trên Cổng dịch vụ công Quốc gia năm 2020'}\n",
+      "{'id': 100016, 'text': 'Kế hoạch 4223/KH-UBND năm 2020 thực hiện Nghị quyết 35/NQ-CP về tăng cường huy động nguồn lực của xã hội đầu tư cho phát triển giáo dục và đào tạo trên địa bàn tỉnh Đắk Lắk giai đoạn 2019-2025'}\n",
+      "{'id': 100017, 'text': 'Quyết định 22/2020/QĐ-UBND về tiêu chuẩn, định mức sử dụng máy móc, thiết bị chuyên dùng thuộc lĩnh vực y tế do tỉnh Vĩnh Phúc ban hành'}\n",
+      "{'id': 100018, 'text': 'Quyết định 18/2020/QĐ-UBND quy định về mức giá dịch vụ sử dụng đường bộ của các phương tiện giao thông đối với dự án Đường ĐT.768 theo hình thức đối tác công tư, hợp đồng BOT do tỉnh Đồng Nai ban hành'}\n",
+      "{'id': 100019, 'text': 'Thông báo 1403/TB-GDĐT-KTKĐCLGD năm 2020 về tuyển thẳng vào lớp 10 trung học phổ thông năm học 2020-2021 do Sở Giáo dục và Đào tạo thành phố Hồ Chí Minh ban hành'}\n"
      ]
     }
    ],
@@ -218,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +260,7 @@
        " 'Quyết định 13/2020/QĐ-UBND bãi bỏ Quyết định 10/2015/QĐ-UBND quy định về chính sách hỗ trợ doanh nghiệp xuất khẩu phần mềm trên địa bàn thành phố Đà Nẵng']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,16 +317,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"I'm ready to help. What is your question? I'll use the provided context to give a concise answer.\""
+       "\"I'm ready to help! What is your question? I will use the provided context to give a concise answer based on our conversation history.\""
       ]
      },
-     "execution_count": 14,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,14 +355,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Quyết định 720/QĐ-CTN năm 2020 là quyết định của Chủ tịch nước Việt Nam về cho thôi quốc tịch Việt Nam đối với 95 công dân hiện đang cư trú tại Đức.\n"
+      "Quyết định 720/QĐ-CTN năm 2020 là quyết định của Chủ tịch nước Việt Nam cho thôi quốc tịch Việt Nam đối với 95 công dân hiện đang cư trú tại Đức. Động thái này nhằm thực hiện chính sách nhân đạo và phù hợp với quy định pháp luật về quyền tự do lựa chọn quốc tịch của công dân.\n"
      ]
     }
    ],
@@ -373,14 +372,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tôi lấy thông tin từ các quyết định hành chính của Việt Nam được lưu trữ trong cơ sở dữ liệu này. Cụ thể, tôi có thông tin từ các Quyết định 720/QĐ-CTN năm 2020 và Quyết định 719/QĐ-CTN năm 2020 đến từ văn phòng Chủ tịch nước.\n"
+      "Tôi lấy thông tin từ các quyết định của Chủ tịch nước Việt Nam và Thủ tướng Chính phủ ban hành. Thông thường, tôi không thể biết được nguồn thông tin chính xác mà bạn có trong đầu.\n"
      ]
     }
    ],
@@ -390,14 +389,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tôi lấy thông tin từ các quyết định hành chính của Việt Nam được lưu trữ trong cơ sở dữ liệu này, cụ thể là Quyết định 720/QĐ-CTN năm 2020 và Quyết định 719/QĐ-CTN năm 2020 đến từ văn phòng Chủ tịch nước.\n"
+      "Tôi lấy thông tin từ các quyết định của Chủ tịch nước Việt Nam và Thủ tướng Chính phủ ban hành. Cụ thể là Quyết định 720/QĐ-CTN năm 2020 về cho thôi quốc tịch Việt Nam đối với 95 công dân hiện đang cư trú tại Đức.\n"
      ]
     }
    ],
@@ -407,14 +406,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tôi không có thông tin về câu hỏi trước đó. Tôi chỉ biết rằng tôi lấy thông tin từ các quyết định hành chính của Việt Nam được lưu trữ trong cơ sở dữ liệu này, cụ thể là Quyết định 720/QĐ-CTN năm 2020 và Quyết định 719/QĐ-CTN năm 2020 đến từ văn phòng Chủ tịch nước.\n"
+      "Tôi có thông tin về các quyết định của Chủ tịch nước Việt Nam và Thủ tướng Chính phủ ban hành. Cụ thể, Quyết định 720/QĐ-CTN năm 2020 là quyết định cho thôi quốc tịch Việt Nam đối với 95 công dân hiện đang cư trú tại Đức.\n"
      ]
     }
    ],
@@ -438,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +458,7 @@
        "{'insert_count': 3, 'ids': [0, 1, 2], 'cost': 0}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +495,7 @@
        " \twith 10 stored elements and shape (1, 250002)>}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,14 +510,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'id': 1, 'distance': 0.9326093196868896, 'entity': {'question': 'Quyết định 720/QĐ-CTN năm 2020 có gì', 'answer': '2'}}, {'id': 0, 'distance': 0.9128784537315369, 'entity': {'question': 'Quyết định 720/QĐ-CTN năm 2020 là gì', 'answer': '1'}}]\n"
+      "[{'id': 1, 'distance': 0.9326093196868896, 'entity': {'question': 'Quyết định 720/QĐ-CTN năm 2020 có gì', 'answer': '2'}}, {'id': 0, 'distance': 0.9128784537315369, 'entity': {'question': 'Quyết định 720/QĐ-CTN năm 2020 là gì', 'answer': '1'}}, {'id': 2, 'distance': 0.2726913392543793, 'entity': {'question': 'Tôi yêu em', 'answer': '3'}}]\n"
      ]
     }
    ],
