feat: add report

--- a/research/RAG_pipeline_final.ipynb
+++ b/research/RAG_pipeline_final.ipynb
@@ -30,6 +30,7 @@
    "outputs": [],
    "source": [
     "# Step 4: Initialize LLaMA LLM via Ollama\n",
+    "# freeze\n",
     "llm = Ollama(model=\"llama3.1:latest\")\n",
     "# llm = Ollama(model=\"llama3.1:70b\")\n"
    ]
@@ -101,73 +102,73 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import os\n",
-    "# import pandas as pd\n",
+    "import os\n",
+    "import pandas as pd\n",
     "\n",
-    "# # Đường dẫn đến thư mục \"Khoi\"\n",
-    "# folder_path = '../Khoi'\n",
+    "# Đường dẫn đến thư mục \"Khoi\"\n",
+    "folder_path = '../Khoi'\n",
     "\n",
-    "# # Danh sách lưu trữ các DataFrame\n",
-    "# df_list = []\n",
+    "# Danh sách lưu trữ các DataFrame\n",
+    "df_list = []\n",
     "\n",
-    "# # Duyệt qua tất cả các file trong thư mục\n",
-    "# # for file_name in os.listdir('Khoi'):\n",
-    "# for file_name in ['Văn Bản Pháp Luật_p100000-100019.parquet']:\n",
-    "#     # Kiểm tra nếu file có định dạng giống \"Văn Bản Pháp Luật_p*.parquet\"\n",
-    "#     print(\"file_name\", file_name)\n",
-    "#     file_path = os.path.join(folder_path, file_name)\n",
+    "# Duyệt qua tất cả các file trong thư mục\n",
+    "# for file_name in os.listdir('Khoi'):\n",
+    "for file_name in ['Văn Bản Pháp Luật_p100000-100019.parquet']:\n",
+    "    # Kiểm tra nếu file có định dạng giống \"Văn Bản Pháp Luật_p*.parquet\"\n",
+    "    print(\"file_name\", file_name)\n",
+    "    file_path = os.path.join(folder_path, file_name)\n",
     "    \n",
-    "#     # Đọc file Parquet và thêm vào danh sách DataFrame\n",
-    "#     file_df = pd.read_parquet(file_path)\n",
+    "    # Đọc file Parquet và thêm vào danh sách DataFrame\n",
+    "    file_df = pd.read_parquet(file_path)\n",
     "    \n",
-    "#     # Thực hiện các chuyển đổi tương tự như bạn đã đề cập\n",
-    "#     file_df['created_date'] = pd.to_datetime(file_df['created_date'], format='%d/%m/%Y')\n",
-    "#     file_df['updated_date'] = pd.to_datetime(file_df['updated_date'], format='%d/%m/%Y')\n",
-    "#     file_df['content_raw'] = file_df['content'].apply(lambda x: x.decode('utf-8') if isinstance(x, bytes) else x)\n",
+    "    # Thực hiện các chuyển đổi tương tự như bạn đã đề cập\n",
+    "    file_df['created_date'] = pd.to_datetime(file_df['created_date'], format='%d/%m/%Y')\n",
+    "    file_df['updated_date'] = pd.to_datetime(file_df['updated_date'], format='%d/%m/%Y')\n",
+    "    file_df['content_raw'] = file_df['content'].apply(lambda x: x.decode('utf-8') if isinstance(x, bytes) else x)\n",
     "    \n",
-    "#     # df_list.append(file_df)\n",
+    "    # df_list.append(file_df)\n",
     "    \n",
     "    \n",
     "\n",
-    "#     # connection = create_connection()\n",
+    "    # connection = create_connection()\n",
     "\n",
-    "#     # cursor = connection.cursor()\n",
+    "    # cursor = connection.cursor()\n",
     "\n",
-    "#     try: \n",
-    "#         # Chèn dữ liệu từ DataFrame vào PostgreSQL\n",
+    "    try: \n",
+    "        # Chèn dữ liệu từ DataFrame vào PostgreSQL\n",
     "        \n",
-    "#         data = []\n",
-    "#         for index, item in file_df.iterrows():\n",
-    "#             docs= [f\"{item.title}\"]\n",
+    "        data = []\n",
+    "        for index, item in file_df.iterrows():\n",
+    "            docs= [f\"{item.title}\"]\n",
     "            \n",
-    "#             docs_embeddings = bge_m3_ef.encode_documents(docs)\n",
+    "            docs_embeddings = bge_m3_ef.encode_documents(docs)\n",
     "\n",
-    "#             vectors = docs_embeddings[\"dense\"]\n",
+    "            vectors = docs_embeddings[\"dense\"]\n",
     "\n",
     "        \n",
-    "#             data.append({\"id\": item.id, \"vector\": vectors[0], \"text\": docs[0], \"subject\": \"van_ban_phap_luat\"} )\n",
+    "            data.append({\"id\": item.id, \"vector\": vectors[0], \"text\": docs[0], \"subject\": \"van_ban_phap_luat\"} )\n",
     "        \n",
-    "#         res = client.insert(collection_name=\"demo_collection\", data=data)\n",
-    "#         print(res)\n",
+    "        res = client.insert(collection_name=\"demo_collection\", data=data)\n",
+    "        print(res)\n",
     "        \n",
-    "#         # Xác nhận các thay đổi vào cơ sở dữ liệu\n",
-    "#         # connection.commit()\n",
+    "        # Xác nhận các thay đổi vào cơ sở dữ liệu\n",
+    "        # connection.commit()\n",
     "\n",
-    "#     except Exception as e:\n",
-    "#         print(e)\n",
+    "    except Exception as e:\n",
+    "        print(e)\n",
     "\n",
-    "#     # Đóng kết nối\n",
-    "#     # cursor.close()\n",
-    "#     # connection.close()\n",
+    "    # Đóng kết nối\n",
+    "    # cursor.close()\n",
+    "    # connection.close()\n",
     "\n",
-    "#     print(\"Data inserted successfully!\")\n",
+    "    print(\"Data inserted successfully!\")\n",
     "\n",
     "\n",
-    "# # # Nối tất cả các DataFrame lại với nhau thành một DataFrame duy nhất\n",
-    "# # combined_df = pd.concat(df_list, ignore_index=True)\n",
+    "# # Nối tất cả các DataFrame lại với nhau thành một DataFrame duy nhất\n",
+    "# combined_df = pd.concat(df_list, ignore_index=True)\n",
     "\n",
-    "# # # Hiển thị vài dòng đầu tiên của DataFrame\n",
-    "# # combined_df.head()"
+    "# # Hiển thị vài dòng đầu tiên của DataFrame\n",
+    "# combined_df.head()"
    ]
   },
   {
