feat: add get, send, and clear chat

--- a/research/RAG_pipeline_final.ipynb
+++ b/research/RAG_pipeline_final.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain.llms import Ollama\n",
+    "from langchain_community.llms import Ollama\n",
     "from langchain.chains import RetrievalQA\n",
     "from langchain.text_splitter import CharacterTextSplitter\n",
     "from langchain.document_loaders import CSVLoader\n",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,14 +37,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fetching 30 files: 100%|██████████| 30/30 [00:00<00:00, 68311.14it/s]\n",
+      "/Volumes/home/Learn/Master/3.LLMs/rag_pipeline/.venv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "Fetching 30 files: 100%|██████████| 30/30 [00:00<00:00, 80197.02it/s]\n",
       "/Volumes/home/Learn/Master/3.LLMs/rag_pipeline/.venv/lib/python3.11/site-packages/FlagEmbedding/BGE_M3/modeling.py:335: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
       "  colbert_state_dict = torch.load(os.path.join(model_dir, 'colbert_linear.pt'), map_location='cpu')\n",
       "/Volumes/home/Learn/Master/3.LLMs/rag_pipeline/.venv/lib/python3.11/site-packages/FlagEmbedding/BGE_M3/modeling.py:336: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
@@ -71,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,9 +100,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "file_name Văn Bản Pháp Luật_p100000-100019.parquet\n",
+      "{'insert_count': 20, 'ids': [100000, 100001, 100002, 100003, 100004, 100005, 100006, 100007, 100008, 100009, 100010, 100011, 100012, 100013, 100014, 100015, 100016, 100017, 100018, 100019]}\n",
+      "Data inserted successfully!\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import pandas as pd\n",
@@ -173,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +273,7 @@
        " 'Quyết định 13/2020/QĐ-UBND bãi bỏ Quyết định 10/2015/QĐ-UBND quy định về chính sách hỗ trợ doanh nghiệp xuất khẩu phần mềm trên địa bàn thành phố Đà Nẵng']"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,16 +330,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"I'm ready to help! What is your question? I will use the provided context to give a concise answer based on our conversation history.\""
+       "\"I'm ready to assist. What is your question? I'll respond based on any provided context, history, and a concise three-sentence format. Please go ahead with your query!\""
       ]
      },
-     "execution_count": 57,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,14 +368,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Quyết định 720/QĐ-CTN năm 2020 là quyết định của Chủ tịch nước Việt Nam cho thôi quốc tịch Việt Nam đối với 95 công dân hiện đang cư trú tại Đức. Động thái này nhằm thực hiện chính sách nhân đạo và phù hợp với quy định pháp luật về quyền tự do lựa chọn quốc tịch của công dân.\n"
+      "Quyết định 720/QĐ-CTN năm 2020 là quyết định của Chủ tịch nước Việt Nam về cho thôi quốc tịch Việt Nam đối với 95 công dân hiện đang cư trú tại Đức.\n"
      ]
     }
    ],
@@ -373,14 +385,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tôi lấy thông tin từ các quyết định của Chủ tịch nước Việt Nam và Thủ tướng Chính phủ ban hành. Thông thường, tôi không thể biết được nguồn thông tin chính xác mà bạn có trong đầu.\n"
+      "Tôi lấy thông tin từ các quyết định hành chính của Việt Nam, bao gồm các Quyết định của Chủ tịch nước và Thủ tướng Chính phủ. Thông tin này được lưu trữ trong cơ sở dữ liệu để trả lời câu hỏi của người dùng. Bạn có thể chọn một quyết định cụ thể để tôi trả lời chi tiết hơn.\n"
      ]
     }
    ],
@@ -390,14 +402,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tôi lấy thông tin từ các quyết định của Chủ tịch nước Việt Nam và Thủ tướng Chính phủ ban hành. Cụ thể là Quyết định 720/QĐ-CTN năm 2020 về cho thôi quốc tịch Việt Nam đối với 95 công dân hiện đang cư trú tại Đức.\n"
+      "Tôi lấy thông tin từ các quyết định hành chính của Việt Nam, bao gồm các Quyết định của Chủ tịch nước và Thủ tướng Chính phủ. Thông tin này được lưu trữ trong cơ sở dữ liệu để trả lời câu hỏi của người dùng. Cụ thể, tôi đã lấy thông tin về Quyết định 720/QĐ-CTN từ đây.\n"
      ]
     }
    ],
@@ -407,14 +419,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tôi có thông tin về các quyết định của Chủ tịch nước Việt Nam và Thủ tướng Chính phủ ban hành. Cụ thể, Quyết định 720/QĐ-CTN năm 2020 là quyết định cho thôi quốc tịch Việt Nam đối với 95 công dân hiện đang cư trú tại Đức.\n"
+      "Quyết định 719/QĐ-CTN năm 2020 là quyết định cho thôi quốc tịch Việt Nam đối với 15 công dân hiện đang cư trú tại Hồng Kông (Trung Quốc). Đây là một trong các quyết định hành chính của Việt Nam do Chủ tịch nước ban hành. Quyết định này được thực hiện cùng thời điểm với Quyết định 720/QĐ-CTN về việc cho thôi quốc tịch Việt Nam đối với 95 công dân tại Đức.\n"
      ]
     }
    ],
@@ -438,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +471,7 @@
        "{'insert_count': 3, 'ids': [0, 1, 2], 'cost': 0}"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +508,7 @@
        " \twith 10 stored elements and shape (1, 250002)>}"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
