--- a/backend/test.ipynb
+++ b/backend/test.ipynb
@@ -810,7 +810,11 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": ""
+   "source": [
+    "#### TODO:\n",
+    "#### https://github.com/NirDiamant/RAG_Techniques/blob/main/all_rag_techniques/retrieval_with_feedback_loop.ipynb\n",
+    "### Rerank with cross-encoder model https://github.com/NirDiamant/RAG_Techniques/blob/main/all_rag_techniques/reranking.ipynb\n"
+   ]
   }
  ],
  "metadata": {
