--- a/backend/test.ipynb
+++ b/backend/test.ipynb
@@ -611,7 +611,11 @@
     "        if parse_qac_response(qac_res) == \"yes\":\n",
     "            contexts.append(doc)\n",
     "        else:\n",
-    "            print(parse_qac_response(qac_res))"
+    "            print(parse_qac_response(qac_res))\n",
+    "            \n",
+    "### NOTE: o buoc nay len(contexts) = 0 tra ve khong tra loi duoc\n",
+    "# if len(contexts) <= 0:\n",
+    "#     return \"Toi khong co thong tin de tra loi cau hoi nay\""
    ],
    "outputs": [
     {
